--- a/de-activities.html
+++ b/de-activities.html
@@ -538,6 +538,7 @@
         <h3>Besuche</h3>
         <ul class="square">
           <li><strong>Internationale Organisationen: </strong><br>
+            2025 | <img class="flag-icon" src="./images/wflags/un.png" alt="UN"> <strong>Vereinte Nationen Universität</strong> (Tokyo, Japan)<br>
             2024 | <img class="flag-icon" src="./images/wflags/un.png" alt="UN"> <strong>Vereinte Nationen in Genf
             </strong> (Genf, Schweiz)<br>
             2024 | <img class="flag-icon" src="./images/wflags/de.png" alt="UN"> <strong>Internationale Agentur für
