--- a/de-resume.html
+++ b/de-resume.html
@@ -478,8 +478,7 @@
 
       <p align="justify" class="hidden-mobile">
 
-        Derzeit arbeitet Dr. Xü als F&E-Ingenieur mit Spezialisierung auf erneuerbare Energiesysteme in Deutschland
-        und widmet sich der Erreichung der Kohlenstoffneutralität in den Energie- und Verkehrssektoren.
+        Im Zusammenspiel von Innovation–Integration–Intelligenz widmet sich Dr. Xu der Weiterentwicklung kritischer Materialien für elektrische Energiesysteme und Anwendungen intelligenter Stromnetze.
 
       </p>
 
