--- a/en-resume.html
+++ b/en-resume.html
@@ -465,8 +465,7 @@
 
       <p align="justify" class="hidden-mobile">
 
-        Currently, Dr. Hong Xu is working as an R&D Engineer specializing in renewable energy power systems in Germany,
-        dedicated to achieving carbon neutrality in the energy and transportation sectors.
+        At the interplay of Innovation–Integration-Intelligence, Dr. Xu is dedicated to advance critical materials for e-power systems and smart grid applications.
 
       </p>
 
