--- a/es-activities.html
+++ b/es-activities.html
@@ -540,6 +540,7 @@
         <h3>Visitas</h3>
         <ul class="square">
           <li><strong>Organizaciones Internacionales: </strong><br>
+            2025 | <img class="flag-icon" src="./images/wflags/un.png" alt="UN"> <strong>Universidad de las Naciones Unidas (Tokio)</strong> (Tokio, Japón)<br>
             2024 | <img class="flag-icon" src="./images/wflags/un.png" alt="ONU"> <strong>Organización de las Naciones
               Unidas en Ginebra</strong> (Ginebra, Suiza)<br>
             2024 | <img class="flag-icon" src="./images/wflags/de.png" alt="UN"> <strong>Agencia Internacional de
