--- a/fr-activities.html
+++ b/fr-activities.html
@@ -554,6 +554,7 @@
         <h3>Visites</h3>
         <ul class="square">
           <li><strong>Organisations Internationales : </strong><br>
+            2025 | <img class="flag-icon" src="./images/wflags/un.png" alt="UN"> <strong>Université des Nations Unies (Tokyo)</strong> (Tokyo, Japon)<br>
             2024 | <img class="flag-icon" src="./images/wflags/un.png" alt="ONU"> <strong>Organisation des Nations Unies
               à Genève
             </strong> (Genève, Suisse)<br>
