--- a/fr-resume.html
+++ b/fr-resume.html
@@ -487,9 +487,8 @@
       </p>
 
       <p align="justify" class="hidden-mobile">
-        Actuellement, Dr. Hong Xu travaille comme ingénieur en R&D spécialisé dans les systèmes énergétiques
-        renouvelables en Allemagne, dédié à atteindre la neutralité carbone dans les secteurs de l'énergie et des
-        transports.
+        À l’intersection de l’Innovation–Intégration–Intelligence, le Dr Xu se consacre au développement de matériaux critiques pour les systèmes de production électrique et les applications des réseaux électriques intelligents.
+
       </p>
 
       <hr class="display-mobile" style="width:113%">
@@ -499,11 +498,11 @@
       <div class="doc-section" id="education">
         <h3>Éducation</h3>
         <ul class="square">
-          <li>2017-2021 | <strong>Doctorat, Énergie renouvelable </strong> (entièrement financée)<br />
+          <li><strong>Doctorat, Énergie renouvelable </strong> (entièrement financée)<br />
             <strong><a href="https://ethz.ch/en.html" target="_blank">École polytechnique fédérale de
                 Zurich</a></strong>, Suisse</p>
 
-          <li>2014-2016 | <strong>MSc, Matériaux & Physique </strong>(double diplôme UE)<br />
+          <li><strong>MSc, Matériaux & Physique </strong>(double diplôme UE)<br />
             <strong><a href="https://www.tum.de/en/" target="_blank">Université technique de Munich</a></strong>,
             Allemagne<br />
             <!-- <strong><a href="https://www.lmu.de/en/" target="_blank">Université Louis-et-Maximilien de
@@ -512,23 +511,23 @@
             France<br /></p>
             <!--[<a href="https://unknown/files/Master_Thesis_LMU_TUM-Xu_Hong.pdf" target="_blank">Thesis</a>]-->
 
-          <li>2009-2013 | <strong>BSc, Chimie des matériaux</strong> (brevets délivrés)<br />
+          <li><strong>BSc, Chimie des matériaux</strong> (brevets délivrés)<br />
             <strong><a href="http://en.bjtu.edu.cn/" target="_blank">Université des transports de Pékin</a></strong>,
             Chine<br />
             <!--[<a href="https://unknown/files/Master_Thesis_LMU_TUM-Xu_Hong.pdf" target="_blank">Thesis</a>]-->
             <p>____</p>
-          <li>2023-2023 | <strong>Formation des cadres, Transition verte</strong> (Bourse)<br />
+          <li><strong>Formation des cadres, Transition verte</strong> (Bourse)<br />
             <strong><a href="https://www.jbs.cam.ac.uk/" target="_blank">École de commerce de l'Université de
                 Cambridge</a></strong>,
             Royaume-Uni<br />
-          <li>2020-2021 | <strong>MBA, Administration des affaires</strong> (temps partiel)<br />
+          <!-- <li>2020-2021 | <strong>MBA, Administration des affaires</strong> (temps partiel)<br />
             <strong><a href="https://quantic.edu/mba" target="_blank">École de commerce quantique</a></strong>,
-            Washington D.C.<br /></p>
+            Washington D.C.<br /></p> -->
 
         </ul>
       </div>
 
-      <hr class="display-mobile" style="width:113%">
+      <!-- <hr class="display-mobile" style="width:113%">
       <hr class="hidden-mobile">
 
       <div class="doc-section" id="academic-experience">
@@ -555,7 +554,7 @@
                 X</a></strong>, Hambourg, Allemagne<br>
           </li>
         </ul>
-      </div>
+      </div> -->
 
 
       <hr class="display-mobile" style="width:113%">
@@ -604,7 +603,7 @@
         </ul>
       </div>
 
-      <hr class="display-mobile" style="width:113%">
+      <!-- <hr class="display-mobile" style="width:113%">
       <hr class="hidden-mobile">
 
       <div class="doc-section" id="industrial-experience">
@@ -613,9 +612,7 @@
 
         <ul class="square">
 
-          <!-- <li>2021-至今 | <strong>研发工程师, 燃料电池系统策略 </strong>
-        <div style="float: right"></div><br>
-        <strong><a href="https://www.freudenberg-eps.com/" target="_blank">德国 · 科德宝集团</a></strong> (动力系统)<br> -->
+         
 
           <li>2017-2019 | <strong>Co-auteur/Collaborateur, Matériaux de Piles à Hydrogène pour l'Automobile </strong>
             <div style="float: right"></div><br>
@@ -623,12 +620,11 @@
           <li>2015-2016 | <strong>Stage, Analyse de Défaillances de Circuits Intégrés</strong>
             <div style="float: right"></div><br>
             <strong><a href="http://infineon.com" target="_blank">Infineon Technologies</a></strong>, Allemagne<br>
-            <!--[<a href="https://unknown/files/Master_Thesis_LMU_TUM-Xu_Hong.pdf" target="_blank">Thèse</a>]-->
 
         </ul>
-      </div>
+      </div> -->
 
-      <hr class="display-mobile" style="width:113%">
+      <!-- <hr class="display-mobile" style="width:113%">
       <hr class="hidden-mobile">
 
       <div class="doc-section" id="exhibitions">
@@ -637,23 +633,23 @@
           <li>
             2024 | <strong>The Smarter E Europe</strong>, Munich, Allemagne<br>
           </li>
-          <!-- <li>
+          <li>
             2024 | <strong>World Hydrogen Summit & Exhibition</strong>, Rotterdam, Pays-Bas<br>
         </li>
         <li>
             2024 | <strong>Hannover Messe: Empowering Sustainable Industry</strong>, Hannover, Allemagne<br>
-        </li> -->
+        </li>
           <li>
             2024 | <strong>Handwerk & Design München</strong>, Munich, Allemagne<br>
           </li>
-          <!-- <li>
+          <li>
             2023 | <strong>H2 & FC EXPO</strong>, Stuttgart, Allemagne<br>
-        </li> -->
+        </li>
           <li>
             2023 | <strong>IAA Mobility</strong>, Munich, Allemagne<br>
           </li>
         </ul>
-      </div>
+      </div> -->
 
       <hr class="display-mobile" style="width:113%">
       <hr class="hidden-mobile">
