--- a/it-activities.html
+++ b/it-activities.html
@@ -499,6 +499,7 @@
         <h3>Visite</h3>
         <ul class="square">
           <li><strong>Organizzazioni Internazionali: </strong><br>
+            2025 | <img class="flag-icon" src="./images/wflags/un.png" alt="UN"> <strong>Università delle Nazioni Unite (Tokyo)</strong> (Tokyo, Giappone)<br>
             2024 | <img class="flag-icon" src="./images/wflags/un.png" alt="UN"> <strong>Organizzazione delle Nazioni
               Unite a Ginevra</strong> (Ginevra, Svizzera)<br>
             2024 | <img class="flag-icon" src="./images/wflags/de.png" alt="UN"> <strong>Agenzia Internazionale per le
