--- a/it-resume.html
+++ b/it-resume.html
@@ -482,9 +482,8 @@
 
       <p align="justify" class="hidden-mobile">
 
-        Attualmente, il Dott. Hong Xu lavora come Ingegnere R&D specializzato in sistemi di alimentazione da energie
-        rinnovabili in Germania, dedicato al raggiungimento della neutralità carbonica nei settori dell'energia e dei
-        trasporti.
+        All’intersezione tra Innovazione–Integrazione–Intelligenza, il Dott. Xu si dedica allo sviluppo di materiali critici per i sistemi elettrici e le applicazioni delle reti elettriche intelligenti.
+
 
       </p>
 
@@ -515,14 +514,14 @@
             <strong><a href="https://www.jbs.cam.ac.uk/" target="_blank">Scuola di Commercio dell'Università di
                 Cambridge</a></strong>,
             Regno Unito<br />
-          <li>2020-2021 | <strong>MBA, Amministrazione degli affari</strong> (tempo parziale)<br />
+          <!-- <li>2020-2021 | <strong>MBA, Amministrazione degli affari</strong> (tempo parziale)<br />
             <strong><a href="https://quantic.edu/mba" target="_blank">Scuola Quantica di Commercio</a></strong>,
-            Washington D.C.<br /></p>
+            Washington D.C.<br /></p> -->
 
         </ul>
       </div>
 
-
+<!-- 
       <hr class="display-mobile" style="width:113%">
       <hr class="hidden-mobile">
 
@@ -553,7 +552,7 @@
             Amburgo, Germania<br>
           </li>
         </ul>
-      </div>
+      </div> -->
 
 
       <hr class="display-mobile" style="width:113%">
@@ -603,7 +602,7 @@
       </div>
 
 
-      <hr class="display-mobile" style="width:113%">
+      <!-- <hr class="display-mobile" style="width:113%">
       <hr class="hidden-mobile">
 
       <div class="doc-section" id="industrial-experience">
@@ -612,9 +611,9 @@
 
         <ul class="square">
 
-          <!-- <li>2021-Presente | <strong>Ingegnere di Ricerca e Sviluppo, Strategie sui Sistemi a Celle a Combustibile </strong>
+          <li>2021-Presente | <strong>Ingegnere di Ricerca e Sviluppo, Strategie sui Sistemi a Celle a Combustibile </strong>
             <div style="float: right"></div><br>
-            <strong><a href="https://www.freudenberg-eps.com/" target="_blank">Freudenberg Group</a></strong> (Sistemi di Potenza)<br> -->
+            <strong><a href="https://www.freudenberg-eps.com/" target="_blank">Freudenberg Group</a></strong> (Sistemi di Potenza)<br>
 
           <li>2017-2019 | <strong>Co-autore/Collaboratore, Materiali per Celle a Combustibile Automotive </strong>
             <div style="float: right"></div><br>
@@ -622,12 +621,11 @@
           <li>2015-2016 | <strong>Stage, Analisi dei Guasti dei Chip</strong>
             <div style="float: right"></div><br>
             <strong><a href="http://infineon.com" target="_blank">Infineon Technologies</a></strong>, Germania<br>
-            <!--[<a href="https://unknown/files/Master_Thesis_LMU_TUM-Xu_Hong.pdf" target="_blank">Tesi</a>]-->
 
         </ul>
-      </div>
+      </div> -->
 
-      <hr class="display-mobile" style="width:113%">
+      <!-- <hr class="display-mobile" style="width:113%">
       <hr class="hidden-mobile">
 
       <div class="doc-section" id="exhibitions">
@@ -636,23 +634,23 @@
           <li>
             2024 | <strong>The Smarter E Europe</strong>, Monaco di Baviera, Germania<br>
           </li>
-          <!-- <li>
+          <li>
             2024 | <strong>World Hydrogen Summit & Exhibition</strong>, Rotterdam, Paesi Bassi<br>
           </li>
           <li>
             2024 | <strong>Hannover Messe: Empowering Sustainable Industry</strong>, Hannover, Germania<br>
-          </li> -->
+          </li>
           <li>
             2024 | <strong>Handwerk & Design München</strong>, Monaco di Baviera, Germania<br>
           </li>
-          <!-- <li>
+          <li>
             2023 | <strong>H2 & FC EXPO</strong>, Stoccarda, Germania<br>
-          </li> -->
+          </li>
           <li>
             2023 | <strong>IAA Mobility</strong>, Monaco di Baviera, Germania<br>
           </li>
         </ul>
-      </div>
+      </div> -->
 
 
 
