--- a/es-resume.html
+++ b/es-resume.html
@@ -480,8 +480,7 @@
 
 
       <p align="justify" class="hidden-mobile">
-        Actualmente, el Dr. Hong Xu trabaja como Ingeniero de I+D especializado en sistemas de energía renovable en
-        Alemania, dedicado a lograr la neutralidad de carbono en los sectores de energía y transporte.
+        En la intersección de Innovación–Integración–Inteligencia, el Dr. Xu se dedica al desarrollo de materiales críticos para sistemas de energía eléctrica y aplicaciones de redes eléctricas inteligentes.
       </p>
 
 
@@ -492,11 +491,11 @@
       <div class="doc-section" id="education">
         <h3>Educación</h3>
         <ul class="square">
-          <li>2017-2021 | <strong>Doctorado, Energías renovables</strong> (Financiación total)<br />
+          <li><strong>Doctorado, Energías renovables</strong> (Financiación total)<br />
             <strong><a href="https://ethz.ch/en.html" target="_blank">Escuela Politécnica Federal de
                 Zúrich</a></strong>, Suiza</p>
 
-          <li>2014-2016 | <strong>MSc, Materiales y Física</strong> (doble titulación de la UE)<br />
+          <li><strong>MSc, Materiales y Física</strong> (doble titulación de la UE)<br />
             <strong><a href="https://www.tum.de/en/" target="_blank">Universidad Técnica de Múnich</a></strong>,
             Alemania<br /><strong><a href="https://www.lmu.de/en/" target="_blank">Universidad Luiso-Maximiliana de
                 Múnich</a></strong>,
@@ -505,23 +504,23 @@
             Francia<br /></p>-->
             <!--[<a href="https://unknown/files/Master_Thesis_LMU_TUM-Xu_Hong.pdf" target="_blank">Tesis</a>]-->
 
-          <li>2009-2013 | <strong>BSc, Química de materiales</strong> (Patentes otorgadas)<br />
+          <li><strong>BSc, Química de materiales</strong> (Patentes otorgadas)<br />
             <strong><a href="http://en.bjtu.edu.cn/" target="_blank">Universidad de Transporte de Beijing</a></strong>,
             China<br />
             <!--[<a href="https://unknown/files/Master_Thesis_LMU_TUM-Xu_Hong.pdf" target="_blank">Tesis</a>]-->
             <p>____</p>
-          <li>2023-2023 | <strong>Educación ejecutiva, Transición Verde</strong> (Beca)<br />
+          <li><strong>Educación ejecutiva, Transición Verde</strong> (Beca)<br />
             <strong><a href="https://www.jbs.cam.ac.uk/" target="_blank">Escuela de Negocios Judge de
                 Cambridge</a></strong>,
             Reino Unido<br />
-          <li>2020-2021 | <strong>MBA, Administración de Empresas</strong> (tiempo parcial)<br />
+          <!-- <li>2020-2021 | <strong>MBA, Administración de Empresas</strong> (tiempo parcial)<br />
             <strong><a href="https://quantic.edu/mba" target="_blank">Escuela de Negocios Cuántica</a></strong>,
-            Washington D.C.<br /></p>
+            Washington D.C.<br /></p> -->
 
         </ul>
       </div>
 
-      <hr class="display-mobile" style="width:113%">
+      <!-- <hr class="display-mobile" style="width:113%">
       <hr class="hidden-mobile">
 
       <div class="doc-section" id="academic-experience">
@@ -550,7 +549,7 @@
             Hamburgo, Alemania<br>
           </li>
         </ul>
-      </div>
+      </div> -->
 
 
       <hr class="display-mobile" style="width:113%">
@@ -596,7 +595,7 @@
         </ul>
       </div>
 
-      <hr class="display-mobile" style="width:113%">
+      <!-- <hr class="display-mobile" style="width:113%">
       <hr class="hidden-mobile">
 
       <div class="doc-section" id="industrial-experience">
@@ -605,9 +604,7 @@
 
         <ul class="square">
 
-          <!-- <li>2021-至今 | <strong>研发工程师, 燃料电池系统策略 </strong>
-            <div style="float: right"></div><br>
-            <strong><a href="https://www.freudenberg-eps.com/" target="_blank">德国 · 科德宝集团</a></strong> (动力系统)<br> -->
+
 
           <li>2017-2019 | <strong>Coautor/Colaborador, Materiales para Celdas de Combustible Automotrices</strong>
             <div style="float: right"></div><br>
@@ -615,13 +612,12 @@
           <li>2015-2016 | <strong>Prácticas, Análisis de Fallos en Chips</strong>
             <div style="float: right"></div><br>
             <strong><a href="http://infineon.com" target="_blank">Infineon Technologies</a></strong>, Alemania<br>
-            <!--[<a href="https://unknown/files/Master_Thesis_LMU_TUM-Xu_Hong.pdf" target="_blank">Tesis</a>]-->
 
         </ul>
-      </div>
+      </div> -->
 
 
-      <hr class="display-mobile" style="width:113%">
+      <!-- <hr class="display-mobile" style="width:113%">
       <hr class="hidden-mobile">
 
       <div class="doc-section" id="exhibitions">
@@ -630,23 +626,23 @@
           <li>
             2024 | <strong>The Smarter E Europe</strong>, Múnich, Alemania<br>
           </li>
-          <!-- <li>
+          <li>
             2024 | <strong>World Hydrogen Summit & Exhibition</strong>, Róterdam, Países Bajos<br>
           </li>
           <li>
             2024 | <strong>Hannover Messe: Empowering Sustainable Industry</strong>, Hannover, Alemania<br>
-          </li> -->
+          </li>
           <li>
             2024 | <strong>Handwerk & Design München</strong>, Múnich, Alemania<br>
           </li>
-          <!-- <li>
+          <li>
             2023 | <strong>H2 & FC EXPO</strong>, Stuttgart, Alemania<br>
-          </li> -->
+          </li>
           <li>
             2023 | <strong>IAA Mobility</strong>, Múnich, Alemania<br>
           </li>
         </ul>
-      </div>
+      </div> -->
 
       <hr class="display-mobile" style="width:113%">
       <hr class="hidden-mobile">
