--- a/ar.html
+++ b/ar.html
@@ -363,7 +363,7 @@
       <div class="image-wrapper hidden-mobile">
         <img src="images/banner_ar3.gif" width="800" alt="banner Image" />
 
-        
+
         <div class="orange-dot" alt="Hamburg" style="top: 23.1%; left: 50.9%;"></div>
         <div class="orange-dot" alt="Paris" style="top: 29.5%; left: 48.4%;"></div>
         <div class="orange-dot" alt="Munich" style="top: 31.3%; left: 51.6%;"></div>
@@ -720,8 +720,24 @@
                 class='blue'>UNchM2kAAAAJ&hl</span></a> (الاستشهادات: <span
               class="google_scholar_citation"></span>+)<br /></li>
 
-          <a href="https://www.flagcounter.me/details/eVN"><img src="https://www.flagcounter.me/eVN/"
-              alt="Flag Counter"></a>
+         
+              <a href="https://info.flagcounter.com/D897" style="
+              display: inline-block;
+              width: 94%;
+              height: 93%;
+              overflow: hidden;
+              position: relative;
+            ">
+              <img
+                src="https://s01.flagcounter.com/count/D897/bg_FFFFFF/txt_404040/border_FFFFFF/columns_8/maxflags_16/viewers_3/labels_0/pageviews_1/flags_0/percent_0/"
+                border="0" style="
+                width: auto;
+                height: auto;
+                object-fit: fill;
+                object-position: top right;
+                transform: translateX(0%) translateY(40%);
+              " />
+                </a>
           <!-- https://www.flagcounter.me/regenerate/eVN WNUZSB8Wy 阿拉伯语-->
           <!-- <br>
           <a href="https://info.flagcounter.com/D897" target="_blank">
