--- a/cn-activities.html
+++ b/cn-activities.html
@@ -1473,8 +1473,24 @@
           <li><strong>摄影</strong>: <a href="https://photo.h-xu.com/" target="_blank" target="_blank"><span
                 class='blue'>photo.h-xu.com</span></a> (X-graphy)<br></li>
 
-          <a href="https://www.flagcounter.me/details/eVE"><img src="https://www.flagcounter.me/eVE/"
-              alt="Flag Counter"></a> <!---   https://www.flagcounter.me/regenerate/eVE  Password:8iExFwT7N  中文  -->
+          
+              <a href="https://info.flagcounter.com/D897" style="
+              display: inline-block;
+              width: 94%;
+              height: 93%;
+              overflow: hidden;
+              position: relative;
+            ">
+              <img
+                src="https://s01.flagcounter.com/count/D897/bg_FFFFFF/txt_404040/border_FFFFFF/columns_8/maxflags_16/viewers_3/labels_0/pageviews_1/flags_0/percent_0/"
+                border="0" style="
+                width: auto;
+                height: auto;
+                object-fit: fill;
+                object-position: top right;
+                transform: translateX(0%) translateY(40%);
+              " />
+                </a> <!---   https://www.flagcounter.me/regenerate/eVE  Password:8iExFwT7N  中文  -->
 
           <!-- <br>
           <a href="https://info.flagcounter.com/D897" target="_blank">
