--- a/cn.html
+++ b/cn.html
@@ -739,8 +739,24 @@
             </div>
           </a> -->
 
-          <a href="https://www.flagcounter.me/details/eVE"><img src="https://www.flagcounter.me/eVE/"
-              alt="Flag Counter"></a> <!---   https://www.flagcounter.me/regenerate/eVE  Password:8iExFwT7N  中文  -->
+          
+              <a href="https://info.flagcounter.com/D897" style="
+              display: inline-block;
+              width: 94%;
+              height: 93%;
+              overflow: hidden;
+              position: relative;
+            ">
+              <img
+                src="https://s01.flagcounter.com/count/D897/bg_FFFFFF/txt_404040/border_FFFFFF/columns_8/maxflags_16/viewers_3/labels_0/pageviews_1/flags_0/percent_0/"
+                border="0" style="
+                width: auto;
+                height: auto;
+                object-fit: fill;
+                object-position: top right;
+                transform: translateX(0%) translateY(40%);
+              " />
+                </a> <!---   https://www.flagcounter.me/regenerate/eVE  Password:8iExFwT7N  中文  -->
 
 
           <!---<a href="https://www.flagcounter.me/details/enB"><img src="https://www.flagcounter.me/enB/"
