--- a/de-activities.html
+++ b/de-activities.html
@@ -769,8 +769,24 @@
               target="_blank" target="_blank"><span class='blue'>UNchM2kAAAAJ&hl</span></a> (Zitate: <span
               class="google_scholar_citation"></span>+)<br /></li>
 
-          <a href="https://www.flagcounter.me/details/eVG"><img src="https://www.flagcounter.me/eVG/"
-              alt="Flag Counter"></a> <!--  https://www.flagcounter.me/regenerate/eVG HSNFBsABe 德语 -->
+          
+              <a href="https://info.flagcounter.com/D897" style="
+              display: inline-block;
+              width: 94%;
+              height: 93%;
+              overflow: hidden;
+              position: relative;
+            ">
+              <img
+                src="https://s01.flagcounter.com/count/D897/bg_FFFFFF/txt_404040/border_FFFFFF/columns_8/maxflags_16/viewers_3/labels_0/pageviews_1/flags_0/percent_0/"
+                border="0" style="
+                width: auto;
+                height: auto;
+                object-fit: fill;
+                object-position: top right;
+                transform: translateX(0%) translateY(40%);
+              " />
+                </a> <!--  https://www.flagcounter.me/regenerate/eVG HSNFBsABe 德语 -->
           <!-- <br>
           <a href="https://info.flagcounter.com/D897" target="_blank"><img
               src="https://s01.flagcounter.com/count/D897/bg_FFFFFF/txt_404040/border_FFFFFF/columns_8/maxflags_16/viewers_3/labels_0/pageviews_1/flags_0/percent_0/"
