--- a/cn-gallery.html
+++ b/cn-gallery.html
@@ -447,11 +447,8 @@
 
         <span style="float:right; font-family:verdana">
           <span style="display:inline-block;margin-top:13px;margin-bottom:0px;font-size:small" for="languages">
-            <a href='javascript:(function(){var s=document.getElementById("tongwenlet_cn");if(s!=null){document.body.removeChild(s);}var s=document.createElement("script");s.language="javascript";s.type="text/javascript";s.src="https://rawgit.com/skofkyo/userChromeJS/master/UserScriptLoader/bookmarklet_cn.js";s.id="tongwenlet_cn";document.body.appendChild(s);})();'
-              class="d-inline-block p-3"><img src="images/flag_cn.png" alt="flag"
-                style="height:23px;display:inline-block;top:7px;position:relative;">&nbsp;简</a> / <a
-              href='javascript:(function(){var s=document.getElementById("tongwenlet_tw");if(s!=null){document.body.removeChild(s);}var s=document.createElement("script");s.language="javascript";s.type="text/javascript";s.src="https://rawgit.com/skofkyo/userChromeJS/master/UserScriptLoader/bookmarklet_tw.js";s.id="tongwenlet_tw";document.body.appendChild(s);})();'
-              class="d-inline-block p-3"><img src="images/flag_hk.png" alt="flag"
+            <a href="#" onclick="setSimplified()" class="d-inline-block p-3"><img src="images/flag_cn.png" alt="flag"
+                style="height:23px;display:inline-block;top:7px;position:relative;">&nbsp;简</a> / <a href="#" onclick="setTraditional()" class="d-inline-block p-3"><img src="images/flag_hk.png" alt="flag"
                 style="height:23px;display:inline-block;top:7px;position:relative;"> <img src="images/flag_mc.png"
                 alt="flag" style="height:23px;display:inline-block;top:7px;position:relative;">
               繁</a></span>&nbsp;<select id="languages" name="languages"
@@ -556,9 +553,9 @@
         <span style="float:right; font-family:verdana">
 
           <select id="languages" name="languages"
-            style="width:110px;display:inline-block;color:inherit;margin-bottom:0px;" onchange="handleChange(this)">
-            <option value="cn.html" select>🇨🇳 中文(简体)</option>
-            <option value="javascript:runFanTiJavaScript();">🇭🇰 中文(繁体)</option>
+            style="width:110px;display:inline-block;color:inherit;margin-bottom:0px;" onchange="handleLanguageChange(this)">
+            <option value="simplified" select>🇨🇳 中文(简体)</option>
+            <option value="traditional">🇭🇰 中文(繁体)</option>
             <option value="jp.html">🇯🇵 日本語</option>
             <option value="kr.html">🇰🇷 한국어</option>
             <option value="de.html">🇩🇪 Deutsch</option>
