--- a/cn.html
+++ b/cn.html
@@ -327,16 +327,12 @@
                 <h3 id="logo" style="text-align:center;">
                     <img class="hidden-mobile" src="images/banner_cns3_left.gif" width="155" />
                     <div style="margin-bottom: 15px;"></div>
-                    <h3 id="nameBlock" class="hidden-mobile" align="left"
-                    data-simplified='<ruby>徐<rt><text style="letter-spacing: 0px;">Xú</text></rt></ruby> <ruby>泓 <rt><text style="letter-spacing: 0px;">Hóng</text></rt></ruby> <small><ruby>博士<rt>科学 / Dr.</rt></ruby></small>'
-                    data-traditional='<ruby>徐<rt><text style="letter-spacing: 0px;">Ceòi</text></rt></ruby> <ruby>泓 <rt><text style="letter-spacing: 0px;">Wàng</text></rt></ruby> <small><ruby>博士<rt>科學 / Dr.</rt></ruby></small>'>
-                    </h3>
-                    <!-- <h3 class="hidden-mobile" align="left"><ruby>徐<rt><text style="letter-spacing: -5px;">ㄒㄩˊ</text>
+                    <h3 class="hidden-mobile" align="left"><ruby>徐<rt><text style="letter-spacing: -5px;">ㄒㄩˊ</text>
                             </rt></ruby>&nbsp;<ruby>泓<rt><text style="letter-spacing: -4px;">ㄏㄨㄥˊ</text></rt></ruby>
                         <small><ruby>博 士<rt>科学 /
                                     Dr.</rt>
                             </ruby></small>
-                    </h3> -->
+                    </h3>
 
                     <ul>
                         <span style="display: block; height: 6px;"></span>
@@ -451,11 +447,11 @@
             <p class="hidden-mobile"></p>
             <!--<h3 class="hidden-mobile"><ruby>简<rt><text style="color:rgb(255, 255, 255)">かん</text></rt></ruby> <ruby>介<rt><text style="color:rgb(255, 255, 255)">かい</text> </rt></ruby>-->
             <h3 class="hidden-mobile">
-                <span><ruby>研究进展<rt><text style="color:rgb(255, 255, 255)">Research Progress</text></rt></ruby> <ruby>
-                        <rt><text style="color:rgb(255, 255, 255)"></text></rt>
-                    </ruby> <small><small><small> 「科学无国界」</small></small></small>
-
-                </span>
+              <span>
+                <ruby>嗨，你好!<rt><text style="color:rgb(255, 255, 255)">Hi Ni Hao</text></rt></ruby> <ruby>
+                  <rt><text style="color:rgb(255, 255, 255)"></text> </rt>
+                </ruby><small><small><small>欢迎来自<span id="location">地球</span>的朋友 :-)</small></small> </small>
+              </span>
 
                 <span style="float:right; font-family:verdana">
                     <span style="display:inline-block;margin-top:13px;margin-bottom:0px;font-size:small" for="languages">
