--- a/cn-activities.html
+++ b/cn-activities.html
@@ -381,6 +381,45 @@
       <div class="image-wrapper hidden-mobile ">
         <img src="images/banner_cns6.gif" style="width: 100%; margin-bottom: 3px;" alt="banner Image" />
 
+        <div style="position: absolute; top: 20%; left: 3.5%; 
+        font-family: 'Times New Roman', serif; 
+        font-size: 24px; line-height: 1.2; font-weight: bold; color: white;">
+          曾梦想 仗剑<br>
+          走天涯
+          </div>
+
+          <div style="position: absolute; bottom: 22%; left: 3.5%; 
+                  font-family:'Times New Roman', serif; 
+                  font-size: 24px; line-height: 1.2; font-weight: bold; color: white;">
+          如今 却<br>
+          四海为家
+          </div>
+
+          <div style="position: absolute; bottom: 7%; left: 3.5%; 
+                  font-family: 'Times New Roman', serif; 
+                  font-size: 14px; font-weight: bold; color: white;">
+          —— 许巍《曾经的你》
+          </div>
+
+          <div style="position: absolute; bottom: 7%; right: 3.5%; 
+                  font-family: 'Times New Roman', serif; 
+                  font-size: 14px; font-weight: bold; color: rgb(198, 198, 198);">
+          瑞士 • 马特洪峰
+          </div>
+
+          <!-- 橙色长条 bar -->
+          <div style="
+            position: absolute; 
+            top: 50%;        /* 垂直居中 */
+            left: 3.5%;       /* 偏左 */
+            transform: translateY(-50%); /* 保证真正居中 */
+            width: 80px;    /* 长条的长度 */
+            height: 3px;    /* 长条的高度 */
+            background-color: orange;
+            opacity: 1;    /* 半透明，可以根据需求调整 */
+            border-radius: 0px;  /* 圆角效果，可选 */
+          ">
+          </div>
         <div class="orange-dot-eth" alt="Munich" style="top: 19.3%; left: 60.6%; z-index: 9999;"></div>
 
       </div>
