--- a/cn-contact.html
+++ b/cn-contact.html
@@ -388,12 +388,54 @@
     <!-- Content -->
     <div class="twelve columns offset-by-four content">
 
-      <!--<img class="hidden-mobile" src="images/banner_cns2.png" width="800" />-->
-
       <div class="image-wrapper hidden-mobile ">
-        <div class="image-container">
-          <img src="images/banner_cns2.gif" alt="banner Image">
-          <div class="image-caption"></div>
+        <div class="image-container" style="position: relative; display: inline-block;">
+          <img src="images/banner_cns2.gif" alt="banner Image" style="width:100%; height:auto;">
+        
+          <div style="position: absolute; top: 20%; left: 3.5%; 
+                      font-family: 'Times New Roman', serif; 
+                      font-size: 24px; line-height: 1.2; font-weight: bold; color: white;">
+            一生<br>
+            痴绝 处
+          </div>
+
+          <div style="position: absolute; bottom: 22%; left: 3.5%; 
+                      font-family:'Times New Roman', serif; 
+                      font-size: 24px; line-height: 1.2; font-weight: bold; color: white;">
+           无梦 到<br>
+           徽州
+          </div>
+
+          <div style="position: absolute; bottom: 7%; left: 3.5%; 
+                      font-family: 'Times New Roman', serif; 
+                      font-size: 14px; font-weight: bold; color: white;">
+            —— 汤显祖 [明]
+          </div>
+  
+          <div style="position: absolute; bottom: 7%; right: 3.5%; 
+                      font-family: 'Times New Roman', serif; 
+                      font-size: 14px; font-weight: bold; color: rgb(198, 198, 198);">
+            中國 • 安徽 • 黃山宏村
+          </div>
+
+          <!-- 橙色长条 bar -->
+          <div style="
+                position: absolute; 
+                top: 50%;        /* 垂直居中 */
+                left: 3.5%;       /* 偏左 */
+                transform: translateY(-50%); /* 保证真正居中 */
+                width: 80px;    /* 长条的长度 */
+                height: 3px;    /* 长条的高度 */
+                background-color: orange;
+                opacity: 1;    /* 半透明，可以根据需求调整 */
+                border-radius: 0px;  /* 圆角效果，可选 */
+            ">
+          </div>
+
+
+
+
+
         </div>
 
         <!-- <div class="orange-dot" alt="Hamburg" style="top: 23.1%; left: 50.9%;"></div>
