--- a/cn.html
+++ b/cn.html
@@ -356,90 +356,62 @@
 
         </div>
 
-        <!-- Content -->
-        <div class="twelve columns offset-by-four content">
+  <!-- Content -->
+            <div class="twelve columns offset-by-four content">
+              <div class="image-wrapper hidden-mobile">
+                <img src="images/banner_cns3.gif" width="800" alt="banner Image" />
 
-
-
-            <div class="image-wrapper hidden-mobile ">
-                <img id="pcBanner" src="images/banner_cns3-min2.gif" 
-                data-simplified="images/banner_cns3-min2.gif" 
-                data-traditional="images/banner_zh3-min2.gif" width="800" alt="banner Image" />
-
-                <div class="orange-dot" alt="Hamburg" style="top: 23.1%; left: 50.9%;"></div>
-                <div class="orange-dot" alt="Paris" style="top: 29.5%; left: 48.4%;"></div>
-                <div class="orange-dot" alt="Munich" style="top: 31.3%; left: 51.6%;"></div>
-                <div class="orange-dot" alt="Rennes" style="top: 32.3%; left: 47.2%;"></div>
-                <div class="orange-dot" alt="Zurich" style="top: 33.5%; left: 50.6%;"></div>
-                <div class="orange-dot" alt="Beijing" style="top: 43.6%; left: 90.2%;"></div>
-                <div class="orange-dot" alt="Anqing" style="top: 54.9%; left: 90.8%;"></div>
-                <div class="orange-dot" alt="DC" style="top: 44.7%; left: 19.05%;"></div>
-                <div class="orange-dot" alt="Oxford" style="top: 26.4%; left: 46.8%;"></div>
-                <div class="orange-dot" alt="Frankfurt" style="top: 27%; left: 50.7%;"></div>
-
-                <div class="red-dot" alt="Munich" style="top: 31.3%; left: 51.6%; z-index: 9999;"></div>
-
-
-
-
-                <div class="tooltip" style="top:50%; left: 65%;">
-                    <h6><img src="images/flag_de.png" alt="flag"
-                            style="height:20px;display:inline-block;top:6px;position:relative;">
-                        德国 汉堡</h6>
+                <div style="position:absolute;top:20%;left:3.5%;font-family:'Times New Roman',serif;font-size:24px;line-height:1.2;font-weight:bold;color:white;">世界 上 至少 有<br>两种 游戏</div>
+                <div style="position:absolute;bottom:22%;left:3.5%;font-family:'Times New Roman',serif;font-size:24px;line-height:1.2;font-weight:bold;color:white;">有限 vs 无限<br>的 游戏</div>
+                <div style="position:absolute;bottom:7%;left:3.5%;font-family:'Times New Roman',serif;font-size:14px;font-weight:bold;color:white;">♾️
                 </div>
-                <div class="tooltip" style="top:54%; left: 41%;">
-                    <h6><img src="images/flag_fr.png" alt="flag"
-                            style="height:20px;display:inline-block;top:6px;position:relative;">
-                        法国 巴黎</h6>
-                </div>
+                <div style="position:absolute;bottom:7%;right:3.5%;font-family:'Times New Roman',serif;font-size:14px;font-weight:bold;color:rgb(198,198,198);"></div>
 
-                <div class="tooltip" style="top:60%; left: 70%;">
-                    <h6><img src="images/flag_de.png" alt="flag"
-                            style="height:20px;display:inline-block;top:6px;position:relative;">
-                        德国 慕尼黑</h6>
+                <!-- 橙色长条 bar -->
+                <div style="position:absolute;top:50%;left:3.5%;transform:translateY(-50%);width:130px;height:3px;background-color:orange;opacity:1;border-radius:0;"></div>
 
-                </div>
-                <div class="tooltip" style="top:58%; left: 39%;">
-                    <h6><img src="images/flag_fr.png" alt="flag"
-                            style="height:20px;display:inline-block;top:6px;position:relative;">
-                        法国 雷恩</h6>
-                </div>
-                <div class="tooltip" style="top:64%; left: 68%;">
-                    <h6><img src="images/flag_ch.png" alt="flag"
-                            style="height:20px;display:inline-block;top:6px;position:relative;">
-                        瑞士 苏黎世</h6>
+                <div style="position:absolute;top:16.1%;left:51.2%;font-family:'Microsoft YaHei',sans-serif;font-size:10px;line-height:1.2;font-weight:bold;color:orange;">汉堡</div>
+                <div class="tooltip" style="top:30%;left:75%;"><h6><img src="images/flag_de.png" alt="flag" style="height:20px;display:inline-block;top:6px;position:relative;"> 德国: 汉堡没有汉堡, 但有美味炸鱼</h6></div>
+                <div class="orange-dot" alt="Hamburg" style="top:23.1%;left:50.9%;"></div>
+                
+                <div style="position:absolute;top:22.5%;left:47.7%;font-family:'Microsoft YaHei',sans-serif;font-size:10px;line-height:1.2;font-weight:bold;color:orange;">巴黎</div>
+                <div class="tooltip" style="top:54%;left:41%;"><h6><img src="images/flag_fr.png" alt="flag" style="height:20px;display:inline-block;top:6px;position:relative;"> 法国: 巴黎, 一场流动的盛宴</h6></div>
+                <div class="orange-dot" alt="Paris" style="top:29.5%;left:48.4%;"></div>
 
-                </div>
-                <div class="tooltip" style="top:60%; left: 80%;">
-                    <h6><img src="images/flag_cn.png" alt="flag"
-                            style="height:20px;display:inline-block;top:6px;position:relative;">
-                        中国 北京</h6>
-                </div>
-                <div class="tooltip" style="top:80%; left: 80%;">
-                    <h6><img src="images/flag_cn.png" alt="flag"
-                            style="height:20px;display:inline-block;top:6px;position:relative;">
-                        中国 安徽</h6>
-                </div>
-                <div class="tooltip" style="top:55%; left: 35%;">
-                    <h6><img src="images/flag_us.png" alt="flag"
-                            style="height:20px;display:inline-block;top:6px;position:relative;">
-                        美国 华盛顿特区</h6>
-                </div>
-                <div class="tooltip" style="top:55%; left: 40%;">
-                    <h6><img src="images/flag_uk.png" alt="flag"
-                            style="height:20px;display:inline-block;top:6px;position:relative;">
-                        英国 牛津</h6>
-                </div>
+                <div style="position:absolute;top:34.3%;left:44.2%;font-family:'Microsoft YaHei',sans-serif;font-size:10px;line-height:1.2;font-weight:bold;color:orange;">雷恩</div>
+                <div class="tooltip" style="top:58%;left:39%;"><h6><img src="images/flag_fr.png" alt="flag" style="height:20px;display:inline-block;top:6px;position:relative;"> 法国: 雷恩, 布列塔尼的可丽饼</h6></div>
+                <div class="orange-dot" alt="Rennes" style="top:32.3%;left:47.2%;"></div>
 
-                <div class="tooltip" style="top:35%; left: 68%;">
-                  <h6><img src="images/flag_de.png" alt="flag"
-                          style="height:20px;display:inline-block;top:6px;position:relative;">
-                      德国 法兰克福</h6>
-              </div>          
+                <div style="position:absolute;top:36.5%;left:48.6%;font-family:'Microsoft YaHei',sans-serif;font-size:10px;line-height:1.2;font-weight:bold;color:orange;">苏黎世</div>
+                <div class="tooltip" style="top:64%;left:68%;"><h6><img src="images/flag_ch.png" alt="flag" style="height:20px;display:inline-block;top:6px;position:relative;"> 瑞士: 苏黎世, 金融与湖水之城</h6></div>
+                <div class="orange-dot" alt="Zurich" style="top:34.5%;left:50.6%;"></div>
 
+                <div style="position:absolute;top:39.6%;left:91.3%;font-family:'Microsoft YaHei',sans-serif;font-size:10px;line-height:1.2;font-weight:bold;color:orange;">北京</div>
+                <div class="tooltip" style="top:60%;left:80%;"><h6><img src="images/flag_cn.png" alt="flag" style="height:20px;display:inline-block;top:6px;position:relative;"> 中国: 北京, 长城守护的六朝古都</h6></div>
+                <div class="orange-dot" alt="Beijing" style="top:43.6%;left:90.2%;"></div>
 
-            </div>
+                <div style="position:absolute;top:56.9%;left:87.1%;font-family:'Microsoft YaHei',sans-serif;font-size:10px;line-height:1.2;font-weight:bold;color:orange;">安徽</div>
+                <div class="tooltip" style="top:80%;left:80%;"><h6><img src="images/flag_cn.png" alt="flag" style="height:20px;display:inline-block;top:6px;position:relative;"> 中国: 安庆, 长江之畔的茶叶戏曲之乡</h6></div>
+                <div class="orange-dot" alt="Anhui" style="top:54.9%;left:90.1%;"></div>
 
+                <div style="position:absolute;top:42.7%;left:20.05%;font-family:'Microsoft YaHei',sans-serif;font-size:10px;line-height:1.2;font-weight:bold;color:orange;">华盛顿</div>
+                <div class="tooltip" style="top:65%;left:35%;"><h6><img src="images/flag_us.png" alt="flag" style="height:20px;display:inline-block;top:6px;position:relative;"> 美国: 华盛顿, 权力与自由的游戏</h6></div>
+                <div class="orange-dot" alt="DC" style="top:44.7%;left:19.05%;"></div>
+
+                <div style="position:absolute;top:26.4%;left:43.3%;font-family:'Microsoft YaHei',sans-serif;font-size:10px;line-height:1.2;font-weight:bold;color:orange;">牛津</div>
+                <div class="tooltip" style="top:55%;left:40%;"><h6><img src="images/flag_uk.png" alt="flag" style="height:20px;display:inline-block;top:6px;position:relative;"> 英国: 牛津, 古典与哲学的天堂</h6></div>
+                <div class="orange-dot" alt="Oxford" style="top:26.4%;left:46.8%;"></div>
+
+                <div style="position:absolute;top:24%;left:51.7%;font-family:'Microsoft YaHei',sans-serif;font-size:10px;line-height:1.2;font-weight:bold;color:orange;">法兰克福</div>
+                <div class="tooltip" style="top:35%;left:78%;"><h6><img src="images/flag_de.png" alt="flag" style="height:20px;display:inline-block;top:6px;position:relative;"> 德国: 法兰克福, 美因河畔的金融中心</h6></div>
+                <div class="orange-dot" alt="Frankfurt" style="top:27%;left:50.7%;"></div>
+
+                <div style="position:absolute;top:30.8%;left:52.9%;font-family:'Microsoft YaHei',sans-serif;font-size:10px;line-height:1.2;font-weight:bold;color:orange;">慕尼黑</div>
+                <div class="tooltip" style="top:60%;left:70%;"><h6><img src="images/flag_de.png" alt="flag" style="height:20px;display:inline-block;top:6px;position:relative;"> 德国: 慕尼黑, 南德阿尔卑斯之门</h6></div>
+                <div class="orange-dot red-dot" alt="Munich" style="top:31.3%;left:51.6%;z-index:9999;"></div>
+
+              </div>
+        
 
 
             <p class="hidden-mobile" style="margin: -4px 0 0 0; padding: 0; height: 0px;"></p>
