--- a/en-contact.html
+++ b/en-contact.html
@@ -319,69 +319,49 @@
       <!--<img class="hidden-mobile" src="images/banner_en2.png" width="800" />-->
 
       <div class="image-wrapper hidden-mobile">
-        <img src="images/banner_en2.gif" style="width: 100%; margin-bottom: 2px;" alt="banner Image" />
-        <!-- 
-        <div class="orange-dot" alt="Hamburg" style="top: 23.1%; left: 50.9%;"></div>
-        <div class="orange-dot" alt="Paris" style="top: 29.5%; left: 48.4%;"></div>
-        <div class="orange-dot" alt="Munich" style="top: 31.3%; left: 51.6%;"></div>
-        <div class="orange-dot" alt="Rennes" style="top: 32.3%; left: 47.2%;"></div>
-        <div class="orange-dot" alt="Zurich" style="top: 33.5%; left: 50.6%;"></div>
-        <div class="orange-dot" alt="Beijing" style="top: 43.6%; left: 90.2%;"></div>
-        <div class="orange-dot" alt="Anqing" style="top: 54.9%; left: 90.8%;"></div>
-        <div class="orange-dot" alt="DC" style="top: 44.7%; left: 19.05%;"></div>
-        <div class="orange-dot" alt="Oxford" style="top: 26.7%; left: 46.9%;"></div>
+        <img src="images/banner_cns2.gif" style="width: 100%; margin-bottom: 3px;" alt="banner Image" />
 
-        <div class="red-dot" alt="Munich" style="top: 31.3%; left: 51.6%; z-index: 9999;"></div>
+        <div style="position: absolute; top: 20%; left: 3.5%; 
+        font-family: 'Georgia', serif; 
+        font-size: 24px; line-height: 1.2;  color: white;">
+          A Lifetime of 
+          <br>
+          Longing
+        </div>
 
-        <div class="tooltip" style="top:50%; left: 65%;">
-          <h6><img src="images/flag_de.png" alt="Flagge"
-              style="height:20px;display:inline-block;top:6px;position:relative;">
-            Hamburg, Germany</h6>
-          <p>2015</p>
-        </div>
-        <div class="tooltip" style="top:54%; left:41%;">
-          <h6><img src="images/flag_fr.png" alt="Flagge"
-              style="height:20px;display:inline-block;top:6px;position:relative;">
-            Paris, France</h6>
-          <p>2015</p>
-        </div>
-        <div class="tooltip" style="top:60%; left: 70%;">
-          <h6><img src="images/flag_de.png" alt="Flagge"
-              style="height:20px;display:inline-block;top:6px;position:relative;">
-            Munich, Germany</h6>
-          <p>2015-16</p>
-          <p>2021-24</p>
-        </div>
-        <div class="tooltip" style="top:58%; left: 39%;">
-          <h6><img src="images/flag_fr.png" alt="Flagge"
-              style="height:20px;display:inline-block;top:6px;position:relative;">
-            Rennes, France</h6>
-          <p>2014-15</p>
-        </div>
-        <div class="tooltip" style="top:64%; left:68%;">
-          <h6><img src="images/flag_ch.png" alt="Flagge"
-              style="height:20px;display:inline-block;top:6px;position:relative;">
-            Zurich, Switzerland</h6>
-          <p>2016-21</p>
-        </div>
-        <div class="tooltip" style="top:60%; left: 80%;">
-          <h6><img src="images/flag_cn.png" alt="Flagge"
-              style="height:20px;display:inline-block;top:6px;position:relative;">
-            Beijing, China</h6>
-          <p>2009-13</p>
-        </div>
-        <div class="tooltip" style="top:80%; left: 80%;">
-          <h6><img src="images/flag_cn.png" alt="Flagge"
-              style="height:20px;display:inline-block;top:6px;position:relative;">
-            Anqing, China</h6>
-          <p>1993–2009</p>
-        </div>
-        <div class="tooltip" style="top:55%; left: 37%;">
-          <h6><img src="images/flag_us.png" alt="Flagge"
-              style="height:20px;display:inline-block;top:6px;position:relative;">
-            Washington DC, USA</h6>
-          <p>2019-21</p>
-        </div> -->
+          <div style="position: absolute; bottom: 22%; left: 3.5%; 
+                  font-family:'Georgia', serif; 
+                  font-size: 24px; line-height: 1.2;  color: white;">
+           Yet the Dream 
+           <br>
+           of Anhui
+          </div>
+
+          <div style="position: absolute; bottom: 7%; left: 3.5%; 
+                  font-family: 'Georgia', serif; 
+                  font-size: 14px; color: white;">
+          —— Tang Xianzu (1550-1616)
+          </div>
+
+          <div style="position: absolute; bottom: 7%; right: 3.5%; 
+                  font-family: 'Georgia', serif; 
+                  font-size: 14px; color: rgb(198, 198, 198);">
+          Hongcun Town, Anhui, China
+          </div>
+
+          <!-- 橙色长条 bar -->
+          <div style="
+            position: absolute; 
+            top: 50%;        /* 垂直居中 */
+            left: 3.5%;       /* 偏左 */
+            transform: translateY(-50%); /* 保证真正居中 */
+            width: 90px;    /* 长条的长度 */
+            height: 3px;    /* 长条的高度 */
+            background-color: orange;
+            opacity: 1;    /* 半透明，可以根据需求调整 */
+            border-radius: 0px;  /* 圆角效果，可选 */
+          ">
+          </div>
       </div>
 
       <p class="hidden-mobile" style="margin: 0px 0 0 0; padding: 0; height: 2px;"></p>
