--- a/kr-research.html
+++ b/kr-research.html
@@ -357,8 +357,44 @@
       <!--<img class="hidden-mobile" src="images/banner_kr2.png" width="800" />-->
 
       <div class="image-wrapper hidden-mobile">
-        <img src="images/banner_kr4.gif" width="800" alt="banner Image" />
+        <img src="images/banner_cns4.gif" width="800" alt="banner Image" />
+        <div style="position: absolute; top: 20%; left: 3.5%; 
+        font-family: 'Times New Roman', serif; 
+        font-size: 24px; line-height: 1.2; font-weight: bold; color: white;">
+       신에너지<br>
+       풍력-태양광-수소-저장 통합           
+        </div>
 
+        <div style="position: absolute; bottom: 22%; left: 3.5%; 
+                font-family:'Times New Roman', serif; 
+                font-size: 24px; line-height: 1.2; font-weight: bold; color: white;">
+        신교통        <br>
+        저탄소, 스마트, 공유
+      </div>
+
+        <div style="position: absolute; bottom: 7%; left: 3.5%; 
+                font-family: 'Times New Roman', serif; 
+                font-size: 14px; font-weight: bold; color: white;">
+        </div>
+
+        <div style="position: absolute; bottom: 7%; right: 3.5%; 
+                font-family: 'Times New Roman', serif; 
+                font-size: 14px; font-weight: bold; color: rgb(198, 198, 198);">
+        </div>
+
+        <!-- 橙色长条 bar -->
+        <div style="
+          position: absolute; 
+          top: 50%;        /* 垂直居中 */
+          left: 3.5%;       /* 偏左 */
+          transform: translateY(-50%); /* 保证真正居中 */
+          width: 180px;    /* 长条的长度 */
+          height: 3px;    /* 长条的高度 */
+          background-color: orange;
+          opacity: 1;    /* 半透明，可以根据需求调整 */
+          border-radius: 0px;  /* 圆角效果，可选 */
+        ">
+        </div>
       </div>
 
       <p class="hidden-mobile"></p>
