--- a/cn-activities.html
+++ b/cn-activities.html
@@ -382,27 +382,27 @@
         <img src="images/banner_cns6.gif" style="width: 100%; margin-bottom: 3px;" alt="banner Image" />
 
         <div style="position: absolute; top: 20%; left: 3.5%; 
-        font-family: 'Times New Roman', serif; 
+        font-family:'Times New Roman', 'Songti SC', 'STSong', SimSun, serif;
         font-size: 24px; line-height: 1.2; font-weight: bold; color: white;">
           曾梦想 仗剑<br>
           走天涯
           </div>
 
           <div style="position: absolute; bottom: 22%; left: 3.5%; 
-                  font-family:'Times New Roman', serif; 
+                 font-family:'Times New Roman', 'Songti SC', 'STSong', SimSun, serif;
                   font-size: 24px; line-height: 1.2; font-weight: bold; color: white;">
           如今 却<br>
           四海为家
           </div>
 
           <div style="position: absolute; bottom: 7%; left: 3.5%; 
-                  font-family: 'Times New Roman', serif; 
+                  font-family:'Times New Roman', 'Songti SC', 'STSong', SimSun, serif;
                   font-size: 14px; font-weight: bold; color: white;">
           —— 许巍《曾经的你》
           </div>
 
           <div style="position: absolute; bottom: 7%; right: 3.5%; 
-                  font-family: 'Times New Roman', serif; 
+                font-family:'Times New Roman', 'Songti SC', 'STSong', SimSun, serif;
                   font-size: 14px; font-weight: bold; color: rgb(198, 198, 198);">
           瑞士 • 马特洪峰
           </div>
