--- a/cn-contact.html
+++ b/cn-contact.html
@@ -393,27 +393,27 @@
           <img src="images/banner_cns2.gif" alt="banner Image" style="width:100%; height:auto;">
         
           <div style="position: absolute; top: 20%; left: 3.5%; 
-                      font-family: 'Times New Roman', serif; 
+                     font-family:'Times New Roman', 'Songti SC', 'STSong', SimSun, serif;
                       font-size: 24px; line-height: 1.2; font-weight: bold; color: white;">
             一生<br>
             痴绝 处
           </div>
 
           <div style="position: absolute; bottom: 22%; left: 3.5%; 
-                      font-family:'Times New Roman', serif; 
+                      font-family:'Times New Roman', 'Songti SC', 'STSong', SimSun, serif;
                       font-size: 24px; line-height: 1.2; font-weight: bold; color: white;">
            无梦 到<br>
            徽州
           </div>
 
           <div style="position: absolute; bottom: 7%; left: 3.5%; 
-                      font-family: 'Times New Roman', serif; 
+                     font-family:'Times New Roman', 'Songti SC', 'STSong', SimSun, serif;
                       font-size: 14px; font-weight: bold; color: white;">
             —— 汤显祖 [明]
           </div>
   
           <div style="position: absolute; bottom: 7%; right: 3.5%; 
-                      font-family: 'Times New Roman', serif; 
+                     font-family:'Times New Roman', 'Songti SC', 'STSong', SimSun, serif;
                       font-size: 14px; font-weight: bold; color: rgb(198, 198, 198);">
             中國 • 安徽 • 黃山宏村
           </div>
