--- a/cn-resume.html
+++ b/cn-resume.html
@@ -380,27 +380,27 @@
         <img src="images/banner_cns5.gif" style="width: 100%; margin-bottom: 5px;" alt="banner Image" />
         <div class="orange-dot-eth" alt="Munich" style="top: 12.3%; left: 52.2%; z-index: 9999;"></div>
         <div style="position: absolute; top: 20%; left: 3.5%; 
-        font-family: 'Times New Roman', serif; 
+        font-family:'Times New Roman', 'Songti SC', 'STSong', SimSun, serif;
         font-size: 24px; line-height: 1.2; font-weight: bold; color: white;">
         知识 之圆<br>
         扩大时
         </div>
 
         <div style="position: absolute; bottom: 22%; left: 3.5%; 
-                font-family:'Times New Roman', serif; 
+                font-family:'Times New Roman', 'Songti SC', 'STSong', SimSun, serif;
                 font-size: 24px; line-height: 1.2; font-weight: bold; color: white;">
         圆周 之暗<br>
         与之俱增
         </div>
 
         <div style="position: absolute; bottom: 7%; left: 3.5%; 
-                font-family: 'Times New Roman', serif; 
+                font-family:'Times New Roman', 'Songti SC', 'STSong', SimSun, serif;
                 font-size: 14px; font-weight: bold; color: white;">
        —— 爱因斯坦 (ETH校友)
         </div>
 
         <div style="position: absolute; bottom: 7%; right: 3.5%; 
-                font-family: 'Times New Roman', serif; 
+                font-family:'Times New Roman', 'Songti SC', 'STSong', SimSun, serif;
                 font-size: 14px; font-weight: bold; color: rgb(198, 198, 198);">
         </div>
 
