--- a/jp-research.html
+++ b/jp-research.html
@@ -350,26 +350,26 @@
       <div class="image-wrapper hidden-mobile">
         <img src="images/banner_cns4.gif" width="800" alt="banner Image" />
         <div style="position: absolute; top: 20%; left: 3.5%; 
-        font-family: 'Times New Roman', serif; 
+       font-family:'Times New Roman', 'Songti SC', 'STSong', SimSun, serif;
         font-size: 24px; line-height: 1.2; font-weight: bold; color: white;">
        新しいエネルギー<br>
        風・光・水素・蓄電 の一体化             
         </div>
 
         <div style="position: absolute; bottom: 22%; left: 3.5%; 
-                font-family:'Times New Roman', serif; 
+               font-family:'Times New Roman', 'Songti SC', 'STSong', SimSun, serif;
                 font-size: 24px; line-height: 1.2; font-weight: bold; color: white;">
         新しい交通<br>
         低炭素・スマート・共有
       </div>
 
         <div style="position: absolute; bottom: 7%; left: 3.5%; 
-                font-family: 'Times New Roman', serif; 
+               font-family:'Times New Roman', 'Songti SC', 'STSong', SimSun, serif;
                 font-size: 14px; font-weight: bold; color: white;">
         </div>
 
         <div style="position: absolute; bottom: 7%; right: 3.5%; 
-                font-family: 'Times New Roman', serif; 
+               font-family:'Times New Roman', 'Songti SC', 'STSong', SimSun, serif;
                 font-size: 14px; font-weight: bold; color: rgb(198, 198, 198);">
         </div>
 
