--- a/cn-activities.html
+++ b/cn-activities.html
@@ -34,6 +34,8 @@
   <link rel="stylesheet" href="stylesheets/slider.css">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@400;700&display=swap" rel="stylesheet">
+
   <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
@@ -382,27 +384,27 @@
         <img src="images/banner_cns6.gif" style="width: 100%; margin-bottom: 3px;" alt="banner Image" />
 
         <div style="position: absolute; top: 20%; left: 3.5%; 
-        font-family:'Times New Roman', 'Songti SC', 'STSong', SimSun, serif;
+        font-family:'Times New Roman', 'Noto Serif SC','Songti SC', 'STSong', SimSun, serif;
         font-size: 24px; line-height: 1.2; font-weight: bold; color: white;">
           曾梦想 仗剑<br>
           走天涯
           </div>
 
           <div style="position: absolute; bottom: 22%; left: 3.5%; 
-                 font-family:'Times New Roman', 'Songti SC', 'STSong', SimSun, serif;
+                 font-family:'Times New Roman', 'Noto Serif SC','Songti SC', 'STSong', SimSun, serif;
                   font-size: 24px; line-height: 1.2; font-weight: bold; color: white;">
           如今 却<br>
           四海为家
           </div>
 
           <div style="position: absolute; bottom: 7%; left: 3.5%; 
-                  font-family:'Times New Roman', 'Songti SC', 'STSong', SimSun, serif;
+                  font-family:'Times New Roman', 'Noto Serif SC','Songti SC', 'STSong', SimSun, serif;
                   font-size: 14px; font-weight: bold; color: white;">
           —— 许巍《曾经的你》
           </div>
 
           <div style="position: absolute; bottom: 7%; right: 3.5%; 
-                font-family:'Times New Roman', 'Songti SC', 'STSong', SimSun, serif;
+                font-family:'Times New Roman', 'Noto Serif SC','Songti SC', 'STSong', SimSun, serif;
                   font-size: 14px; font-weight: bold; color: rgb(198, 198, 198);">
           瑞士 • 马特洪峰
           </div>
