--- a/cn-contact.html
+++ b/cn-contact.html
@@ -36,6 +36,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Dancing+Script">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@400;700&display=swap" rel="stylesheet">
+
   <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
@@ -393,21 +395,21 @@
           <img src="images/banner_cns2.gif" alt="banner Image" style="width:100%; height:auto;">
         
           <div style="position: absolute; top: 20%; left: 3.5%; 
-                     font-family:'Times New Roman', 'Songti SC', 'STSong', SimSun, serif;
+                     font-family:'Times New Roman', 'Noto Serif SC','Songti SC', 'STSong', SimSun, serif;
                       font-size: 24px; line-height: 1.2; font-weight: bold; color: white;">
             一生<br>
             痴绝 处
           </div>
 
           <div style="position: absolute; bottom: 22%; left: 3.5%; 
-                      font-family:'Times New Roman', 'Songti SC', 'STSong', SimSun, serif;
+                      font-family:'Times New Roman','Noto Serif SC', 'Songti SC', 'STSong', SimSun, serif;
                       font-size: 24px; line-height: 1.2; font-weight: bold; color: white;">
            无梦 到<br>
            徽州
           </div>
 
           <div style="position: absolute; bottom: 7%; left: 3.5%; 
-                     font-family:'Times New Roman', 'Songti SC', 'STSong', SimSun, serif;
+                     font-family:'Times New Roman', 'Noto Serif SC','Songti SC', 'STSong', SimSun, serif;
                       font-size: 14px; font-weight: bold; color: white;">
             —— 汤显祖 [明]
           </div>
