--- a/cn-resume.html
+++ b/cn-resume.html
@@ -32,6 +32,8 @@
   <link rel="stylesheet" href="stylesheets/type.css">
   <link rel="stylesheet" href="stylesheets/slider.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@400;700&display=swap" rel="stylesheet">
+
   <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
@@ -380,27 +382,27 @@
         <img src="images/banner_cns5.gif" style="width: 100%; margin-bottom: 5px;" alt="banner Image" />
         <div class="orange-dot-eth" alt="Munich" style="top: 12.3%; left: 52.2%; z-index: 9999;"></div>
         <div style="position: absolute; top: 20%; left: 3.5%; 
-        font-family:'Times New Roman', 'Songti SC', 'STSong', SimSun, serif;
+        font-family:'Times New Roman', 'Noto Serif SC','Songti SC', 'STSong', SimSun, serif;
         font-size: 24px; line-height: 1.2; font-weight: bold; color: white;">
         知识 之圆<br>
         扩大时
         </div>
 
         <div style="position: absolute; bottom: 22%; left: 3.5%; 
-                font-family:'Times New Roman', 'Songti SC', 'STSong', SimSun, serif;
+                font-family:'Times New Roman', 'Noto Serif SC','Songti SC', 'STSong', SimSun, serif;
                 font-size: 24px; line-height: 1.2; font-weight: bold; color: white;">
         圆周 之暗<br>
         与之俱增
         </div>
 
         <div style="position: absolute; bottom: 7%; left: 3.5%; 
-                font-family:'Times New Roman', 'Songti SC', 'STSong', SimSun, serif;
+                font-family:'Times New Roman', 'Noto Serif SC','Songti SC', 'STSong', SimSun, serif;
                 font-size: 14px; font-weight: bold; color: white;">
        —— 爱因斯坦 (ETH校友)
         </div>
 
         <div style="position: absolute; bottom: 7%; right: 3.5%; 
-                font-family:'Times New Roman', 'Songti SC', 'STSong', SimSun, serif;
+                font-family:'Times New Roman', 'Noto Serif SC','Songti SC', 'STSong', SimSun, serif;
                 font-size: 14px; font-weight: bold; color: rgb(198, 198, 198);">
         </div>
 
