--- a/jp-resume.html
+++ b/jp-resume.html
@@ -517,16 +517,16 @@
             <p>____</p>
           <li>2023-2023 | <strong>エグゼクティブ教育, グリーン転換</strong> (奨学金)<br />
             <strong><a href="https://www.jbs.cam.ac.uk/" target="_blank">英 · ケンブリッジ大学ビジネススクール</a></strong><br />
-          <li>2019-2021 | <strong>修士号、経営管理</strong> (フルアワード)<br />
+          <!-- <li>2019-2021 | <strong>修士号、経営管理</strong> (フルアワード)<br />
             <strong><a href="https://quantic.edu/mba" target="_blank">米 · クアンティックビジネススクール</a></strong><br />
           <li>2018-2019 | <strong>交換留学生, 銀行金融系</strong>
             <div style="float: right"></div><br>
-            <strong><a href="https://uzh.ch" target="_blank">瑞・チューリッヒ大学</a></strong> (Swiss Mobility)<br>
+            <strong><a href="https://uzh.ch" target="_blank">瑞・チューリッヒ大学</a></strong> (Swiss Mobility)<br> -->
 
         </ul>
 
       </div>
-      <hr class="display-mobile" style="width:113%">
+      <!-- <hr class="display-mobile" style="width:113%">
       <hr class="hidden-mobile">
 
       <div class="doc-section" id="academic-experience">
@@ -561,7 +561,7 @@
           </li>
 
         </ul>
-      </div>
+      </div> -->
 
       <hr class="display-mobile" style="width:113%">
       <hr class="hidden-mobile">
