--- a/cn-research.html
+++ b/cn-research.html
@@ -391,7 +391,7 @@
                 <!-- 橙色长条 bar -->
                 <div style="
                   position: absolute; 
-                  top: 50%;        /* 垂直居中 */
+                  top: 49%;        /* 垂直居中 */
                   left: 3.5%;       /* 偏左 */
                   transform: translateY(-50%); /* 保证真正居中 */
                   width: 180px;    /* 长条的长度 */
@@ -401,9 +401,10 @@
                   border-radius: 0px;  /* 圆角效果，可选 */
                 ">
                 </div>
-           
+              
             </div>
 
+            <p class="hidden-mobile" style="margin: 0px 0 0 0; padding: 0; height: 3px;"></p>
 
 
             <p class="hidden-mobile" style="margin: -4px 0 0 0; padding: 0; height: 0px;"></p>
