--- a/en-research.html
+++ b/en-research.html
@@ -361,6 +361,8 @@
           border-radius: 0px;  /* 圆角效果，可选 */
         ">
         </div>
+        <p class="hidden-mobile" style="margin: 0px 0 0 0; padding: 0; height: 5px;"></p>
+
       </div>
 
       <p class="hidden-mobile" style="margin: 0px 0 0 0; padding: 0; height: 2px;"></p>
