--- a/cn-resume.html
+++ b/cn-resume.html
@@ -409,10 +409,10 @@
         <!-- 橙色长条 bar -->
         <div style="
           position: absolute; 
-          top: 50%;        /* 垂直居中 */
+          top: 49%;        /* 垂直居中 */
           left: 3.5%;       /* 偏左 */
           transform: translateY(-50%); /* 保证真正居中 */
-          width: 80px;    /* 长条的长度 */
+          width: 70px;    /* 长条的长度 */
           height: 3px;    /* 长条的高度 */
           background-color: orange;
           opacity: 1;    /* 半透明，可以根据需求调整 */
@@ -421,6 +421,7 @@
         </div>
       </div>
 
+      <p class="hidden-mobile" style="margin: 0px 0 0 0; padding: 0; height: 3px;"></p>
 
       <p class="hidden-mobile" style="margin: -9px 0 0 0; padding: 0; height: 0px;"></p>
 
