--- a/cn.html
+++ b/cn.html
@@ -291,6 +291,8 @@
             const countryName = getCountryNameByCode(countries, countryCode, language);
             document.getElementById("location").textContent = countryName;
             document.getElementById("location2").textContent = countryName;
+            document.getElementById("country-flag").src = `./images/wflags/${countryCode}.png`;
+            document.getElementById("country-flag").alt = countryName;
         }
 
         document.addEventListener('DOMContentLoaded', displayCountryName);
@@ -365,12 +367,12 @@
 
                 <div style="position:absolute;top:20%;left:3.5%;font-family:'Times New Roman', 'Noto Serif SC', 'Songti SC', 'STSong', SimSun, serif;font-size:24px;line-height:1.2;font-weight:bold;color:white;">世界 上 至少 有<br>两种 游戏</div>
                 <div style="position:absolute;bottom:22%;left:3.5%;font-family:'Times New Roman','Noto Serif SC', 'Songti SC', 'STSong', SimSun, serif;font-size:24px;line-height:1.2;font-weight:bold;color:white;">有限 vs 无限<br>的 游戏</div>
-                <div style="position:absolute;bottom:7%;left:3.5%;font-family:'Times New Roman', 'Noto Serif SC','Songti SC', 'STSong', SimSun, serif;font-size:14px;font-weight:bold;color:white;">♾️
+                <div style="position:absolute;bottom:7%;left:3.5%;font-family:'Times New Roman', 'Noto Serif SC','Songti SC', 'STSong', SimSun, serif;font-size:14px;font-weight:bold;color:white;"><img style="position:absolute;height:14px;" id="country-flag" src="./images/wflags/un.png"> ♾️
                 </div>
                 <div style="position:absolute;bottom:7%;right:3.5%;font-family:'Times New Roman', 'Noto Serif SC','Songti SC', 'STSong', SimSun, serif;font-size:14px;font-weight:bold;color:rgb(198,198,198);"></div>
 
                 <!-- 橙色长条 bar -->
-                <div style="position:absolute;top:50%;left:3.5%;transform:translateY(-50%);width:130px;height:3px;background-color:orange;opacity:1;border-radius:0;"></div>
+                <div style="position:absolute;top:49%;left:3.5%;transform:translateY(-50%);width:102px;height:3px;background-color:orange;opacity:1;border-radius:0;"></div>
 
                 <div style="position:absolute;top:16.1%;left:51.2%;font-family:'Microsoft YaHei',sans-serif;font-size:10px;line-height:1.2;font-weight:bold;color:orange;">汉堡</div>
                 <div class="tooltip" style="top:30%;left:75%;"><h6><img src="images/flag_de.png" alt="flag" style="height:20px;display:inline-block;top:6px;position:relative;"> 德国: 汉堡没有汉堡, 但有美味炸鱼</h6></div>
@@ -411,9 +413,11 @@
                 <div style="position:absolute;top:30.8%;left:52.9%;font-family:'Microsoft YaHei',sans-serif;font-size:10px;line-height:1.2;font-weight:bold;color:orange;">慕尼黑</div>
                 <div class="tooltip" style="top:60%;left:70%;"><h6><img src="images/flag_de.png" alt="flag" style="height:20px;display:inline-block;top:6px;position:relative;"> 德国: 慕尼黑, 南德阿尔卑斯之门</h6></div>
                 <div class="orange-dot red-dot" alt="Munich" style="top:31.3%;left:51.6%;z-index:9999;"></div>
+             
 
               </div>
         
+              <p class="hidden-mobile" style="margin: 0px 0 0 0; padding: 0; height: 3px;"></p>
 
 
             <p class="hidden-mobile" style="margin: -4px 0 0 0; padding: 0; height: 0px;"></p>
@@ -583,8 +587,7 @@
         </p>
 
         <p style="text-align:left;">
-          PEK (NǐHǎo)-> CDG (Bonjour)-> HAM (MoinMoin)-> MUC (Servus)-> ZRH (Grüezi)-> LHR (Hello)-> <img
-            id="country-flag" class="flag-icon" src="" alt=""> ?
+          PEK (NǐHǎo)-> CDG (Bonjour)-> HAM (MoinMoin)-> MUC (Servus)-> ZRH (Grüezi)-> ?
           </span>
         </p>
         <!---
