--- a/de.html
+++ b/de.html
@@ -388,9 +388,9 @@
       <div class="image-wrapper hidden-mobile">
         <img src="images/banner_cns3.gif" width="800" alt="banner Image" />
 
-        <div style="position:absolute;top:20%;left:3.5%;font-family:'Georgia',serif;font-size:24px;line-height:1.2;color:white;">Es gibt zwei Arten von<br>Spielen auf der Welt</div>
-        <div style="position:absolute;bottom:22%;left:3.5%;font-family:'Georgia',serif;font-size:24px;line-height:1.2;color:white;">Endliche und<br>Unendliche</div>
-        <div style="position:absolute;bottom:7%;left:3.5%;font-family:'Georgia',serif;font-size:14px;color:white;">♾️
+        <div class="banner-text" style="position:absolute;top:20%;left:3.5%;font-family:'Georgia',serif;font-size:24px;line-height:1.2;color:white;">Es gibt zwei Arten von<br>Spielen auf der Welt</div>
+        <div class="banner-text-2" style="position:absolute;bottom:22%;left:3.5%;font-family:'Georgia',serif;font-size:24px;line-height:1.2;color:white;">Endliche und<br>Unendliche</div>
+        <div style="position:absolute;bottom:7%;left:3.5%;font-family:'Georgia',serif;font-size:14px;color:white;"><img style="position:absolute;height:14px" id="country-flag" src="./images/wflags/un.png"> ♾️
         </div>
         <div style="position:absolute;bottom:7%;right:3.5%;font-family:'Georgia',serif;font-size:14px;color:rgb(198,198,198);"></div>
         
@@ -436,6 +436,8 @@
         <div style="position:absolute;top:30.8%;left:52.9%;font-family:'Microsoft YaHei',sans-serif;font-size:10px;line-height:1.2;font-weight:bold;color:orange;">München</div>
         <div class="tooltip" style="top:60%;left:70%;"><h6><img src="images/flag_de.png" alt="flag" style="height:20px;display:inline-block;top:6px;position:relative;"> Deutschland: München, Tor zu den südlichen Alpen</h6></div>
         <div class="orange-dot red-dot" alt="Munich" style="top:31.3%;left:51.6%;z-index:9999;"></div>
+
+        <p class="hidden-mobile" style="margin: 0px 0 0 0; padding: 0; height: 6px;"></p>
 
       </div>
       <p class="hidden-mobile"></p>
@@ -581,8 +583,7 @@
       </p>
 
       <p style="text-align:left;">
-        PEK (NǐHǎo)-> CDG (Bonjour)-> HAM (MoinMoin)-> MUC (Servus)-> ZRH (Grüezi)-> <img id="country-flag"
-          class="flag-icon" src="" alt=""> ?
+        PEK (NǐHǎo)-> CDG (Bonjour)-> HAM (MoinMoin)-> MUC (Servus)-> ZRH (Grüezi)-> ?
       </p>
       <!---
          <p class="display-mobile" style="text-align:left; padding: 0px; margin: 0px;">
