--- a/en-resume.html
+++ b/en-resume.html
@@ -339,7 +339,7 @@
       <div class="image-wrapper hidden-mobile">
         <img src="images/banner_cns5.gif" style="width: 100%; margin-bottom: 5px;" alt="banner Image" />
         <div class="orange-dot-eth" alt="Munich" style="top: 12.3%; left: 52.2%; z-index: 9999;"></div>
-        <div style="position: absolute; top: 20%; left: 3.5%; 
+        <div class="banner-text" style="position: absolute; top: 20%; left: 3.5%; 
         font-family: 'Georgia', serif; 
         font-size: 24px; line-height: 1.2; color: white;">
         As the Sphere of 
@@ -347,7 +347,7 @@
         Knowledge Expands
       </div>
 
-        <div style="position: absolute; bottom: 22%; left: 3.5%; 
+        <div class="banner-text-2" style="position: absolute; bottom: 22%; left: 3.5%; 
                 font-family:'Georgia', serif; 
                 font-size: 24px; line-height: 1.2; color: white;">
         So does the 
