--- a/es.html
+++ b/es.html
@@ -357,7 +357,7 @@
 
         <div style="position:absolute;top:20%;left:3.5%;font-family:'Georgia',serif;font-size:24px;line-height:1.2;color:white;">Hay dos tipos de<br>juegos en el mundo</div>
         <div style="position:absolute;bottom:22%;left:3.5%;font-family:'Georgia',serif;font-size:24px;line-height:1.2;color:white;">Finito e<br>Infinito</div>
-        <div style="position:absolute;bottom:7%;left:3.5%;font-family:'Georgia',serif;font-size:14px;color:white;">♾️
+        <div style="position:absolute;bottom:7%;left:3.5%;font-family:'Georgia',serif;font-size:14px;color:white;"><img style="position:absolute;height:14px" id="country-flag" src="./images/wflags/un.png">♾️
         </div>
         <div style="position:absolute;bottom:7%;right:3.5%;font-family:'Georgia',serif;font-size:14px;color:rgb(198,198,198);"></div>
         
@@ -548,8 +548,7 @@
 
 
       <p style="text-align:left;">
-        PEK (NǐHǎo)-> CDG (Bonjour)-> HAM (MoinMoin)-> MUC (Servus)-> ZRH (Grüezi)-> <img id="country-flag"
-          class="flag-icon" src="" alt=""> ?
+        PEK (NǐHǎo)-> CDG (Bonjour)-> HAM (MoinMoin)-> MUC (Servus)-> ZRH (Grüezi)-> ?
         </span>
       </p>
       <!---
