--- a/it.html
+++ b/it.html
@@ -388,12 +388,12 @@
 
         <div style="position:absolute;top:20%;left:3.5%;font-family:'Georgia',serif;font-size:24px;line-height:1.2;color:white;">Ci sono due tipi di<br>giochi nel mondo</div>
         <div style="position:absolute;bottom:22%;left:3.5%;font-family:'Georgia',serif;font-size:24px;line-height:1.2;color:white;">Finito e<br>Infinito</div>
-        <div style="position:absolute;bottom:7%;left:3.5%;font-family:'Georgia',serif;font-size:14px;color:white;">♾️
+        <div style="position:absolute;bottom:7%;left:3.5%;font-family:'Georgia',serif;font-size:14px;color:white;"><img style="position:absolute;height:14px" id="country-flag" src="./images/wflags/un.png">♾️
         </div>
         <div style="position:absolute;bottom:7%;right:3.5%;font-family:'Georgia',serif;font-size:14px;color:rgb(198,198,198);"></div>
         
         <!-- Barra arancione -->
-        <div style="position:absolute;top:50%;left:3.5%;transform:translateY(-50%);width:210px;height:3px;background-color:orange;opacity:1;border-radius:0;"></div>
+        <div style="position:absolute;top:50%;left:3.5%;transform:translateY(-50%);width:185px;height:3px;background-color:orange;opacity:1;border-radius:0;"></div>
         
         <div style="position:absolute;top:16.7%;left:51.2%;font-family:'Microsoft YaHei',sans-serif;font-size:10px;line-height:1.2;font-weight:bold;color:orange;">Amburgo</div>
         <div class="tooltip" style="top:30%;left:75%;"><h6><img src="images/flag_de.png" alt="flag" style="height:20px;display:inline-block;top:6px;position:relative;"> Germania: Amburgo non ha hamburger, ma delizioso pesce fritto</h6></div>
@@ -435,7 +435,7 @@
         <div class="tooltip" style="top:60%;left:70%;"><h6><img src="images/flag_de.png" alt="flag" style="height:20px;display:inline-block;top:6px;position:relative;"> Germania: Monaco di Baviera, porta delle Alpi meridionali</h6></div>
         <div class="orange-dot red-dot" alt="Munich" style="top:31.3%;left:51.6%;z-index:9999;"></div>
       </div>
-      <p class="hidden-mobile" style="margin: 0px 0 0 0; padding: 0; height: 2px;"></p>
+      <p class="hidden-mobile" style="margin: 0px 0 0 0; padding: 0; height: 7px;"></p>
 
 
       <p class="hidden-mobile"></p>
@@ -576,8 +576,7 @@
       </p>
 
       <p style="text-align:left;">
-        PEK (NǐHǎo)-> CDG (Bonjour)-> HAM (MoinMoin)-> MUC (Servus)-> ZRH (Grüezi)-> <img id="country-flag"
-          class="flag-icon" src="" alt=""> ?
+        PEK (NǐHǎo)-> CDG (Bonjour)-> HAM (MoinMoin)-> MUC (Servus)-> ZRH (Grüezi)-> ?
         </span>
       </p>
       <!---
