--- a/jp.html
+++ b/jp.html
@@ -360,7 +360,7 @@
       
         <div style="position:absolute;top:20%;left:3.5%;font-family:'Times New Roman', 'Noto Serif SC', 'Songti SC', 'STSong', SimSun, serif;font-size:24px;line-height:1.2;font-weight:bold;color:white;">世界 には 2種類 の<br>ゲーム がある</div>
         <div style="position:absolute;bottom:22%;left:3.5%;font-family:'Times New Roman', 'Noto Serif SC', 'Songti SC', 'STSong', SimSun, serif;font-size:24px;line-height:1.2;font-weight:bold;color:white;">有限 vs 無限<br>のゲーム</div>
-        <div style="position:absolute;bottom:7%;left:3.5%;font-family:'Times New Roman', 'Noto Serif SC', 'Songti SC', 'STSong', SimSun, serif;font-size:14px;font-weight:bold;color:white;">♾️
+        <div style="position:absolute;bottom:7%;left:3.5%;font-family:'Times New Roman', 'Noto Serif SC', 'Songti SC', 'STSong', SimSun, serif;font-size:14px;font-weight:bold;color:white;"><img style="position:absolute;height:14px" id="country-flag" src="./images/wflags/un.png">♾️
         </div>
         <div style="position:absolute;bottom:7%;right:3.5%;font-family:'Times New Roman', 'Noto Serif SC', 'Songti SC', 'STSong', SimSun, serif;font-size:14px;font-weight:bold;color:rgb(198,198,198);"></div>
       
@@ -570,8 +570,7 @@
 
 
       <p style="text-align:left;">
-        PEK (NǐHǎo)-> CDG (Bonjour)-> HAM (MoinMoin)-> MUC (Servus)-> ZRH (Grüezi)-> <img id="country-flag"
-          class="flag-icon" src="" alt=""> ?
+        PEK (NǐHǎo)-> CDG (Bonjour)-> HAM (MoinMoin)-> MUC (Servus)-> ZRH (Grüezi)-> ?
         </span>
       </p>
       <!---
