--- a/kr.html
+++ b/kr.html
@@ -367,7 +367,7 @@
       
         <div style="position:absolute;top:20%;left:3.5%;font-family:'Times New Roman', 'Noto Serif SC', 'Songti SC', 'STSong', SimSun, serif;font-size:24px;line-height:1.2;font-weight:bold;color:white;">세상에는 두 종류의 <br>게임이 있다 </div>
         <div style="position:absolute;bottom:22%;left:3.5%;font-family:'Times New Roman', 'Noto Serif SC', 'Songti SC', 'STSong', SimSun, serif;font-size:24px;line-height:1.2;font-weight:bold;color:white;">유한 및 무한<br>의 게임</div>
-        <div style="position:absolute;bottom:7%;left:3.5%;font-family:'Times New Roman', 'Noto Serif SC', 'Songti SC', 'STSong', SimSun, serif;font-size:14px;font-weight:bold;color:white;">♾️
+        <div style="position:absolute;bottom:7%;left:3.5%;font-family:'Times New Roman', 'Noto Serif SC', 'Songti SC', 'STSong', SimSun, serif;font-size:14px;font-weight:bold;color:white;"><img style="position:absolute;height:14px" id="country-flag" src="./images/wflags/un.png">♾️
         </div>
         <div style="position:absolute;bottom:7%;right:3.5%;font-family:'Times New Roman', 'Noto Serif SC', 'Songti SC', 'STSong', SimSun, serif;font-size:14px;font-weight:bold;color:rgb(198,198,198);"></div>
       
@@ -584,8 +584,7 @@
       </p>
 
       <p style="text-align:left;">
-        PEK (NǐHǎo)-> CDG (Bonjour)-> HAM (MoinMoin)-> MUC (Servus)-> ZRH (Grüezi)-> <img id="country-flag"
-          class="flag-icon" src="" alt=""> ?
+        PEK (NǐHǎo)-> CDG (Bonjour)-> HAM (MoinMoin)-> MUC (Servus)-> ZRH (Grüezi)-> ?
         </span>
       </p>
 
